--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -207,6 +207,7 @@ en:
       user_banned: "%{user} was banned from team %{team}"
   mail_view_welcome: Welcome to %{app_name}
   mail_view_register: 'You are only one step away from using %{app_name}! Please confirm your email address by clicking the following link:'
+  mail_confirm_button: 'Confirm my account'
   pender_could_not_parse: Could not parse this media
   mail_duplicate_email_exists: Your login method for %{app_name}
   mail_duplicate_email_exists_body: "<p>Hello, this is just a friendly reminder to help make sure you get logged in to %{app_name}.</p> <p>What happened: You tried to sign in to %{app_name} with a %{user_provider}-based account linked to %{user_email}. But this email address is already associated with a %{duplicate_provider}-based account in %{app_name}.</p> <p>What to do next: Sign in with %{duplicate_provider}.</p> <p>Then you'll be logged in with the account you were using before. If you need additional help, please email %{support_email}.</p> <p>— The %{app_name} team</p>"
@@ -309,10 +310,10 @@ en:
         subject: "%{user} invited you to join %{team} team"
         hello: Hello %{name}
         someone_invited_you_default:
-          html: "%{name} has invited you to %{team}."
+          html: "%{name} has invited you to join %{team} team as %{role}."
         someone_invited_you_custom:
-          html: "%{name} has invited you to %{team}, saying:"
-        accept: 'You can accept this invitation through this link: %{url}'
+          html: "%{name} has invited you to join %{team} team as %{role}, saying:"
+        accept: 'Accept invitation'
         accept_until: This invitation will expire on %{due_date}.
         ignore: If you don't want to accept the invitation, please ignore this email.
         app_team: "%{app} Team"
@@ -327,14 +328,21 @@ en:
   error_user_is_not_a_team_member: Sorry, you can only assign to members of this team
   error_login_with_exists_account: Sorry, there is another user who is already using this account
   mail_see_it: 'You can see it at: '
-  mail_subject_delete_user: "[%{team}] A user was deleted"
-  mail_body_delete_user: A user account was deleted and its content was reassigned to anonymous user %{id}
   mails_notifications:
     greeting: Hello %{username},
     project_view: View project
     unsubscribe: Unsubscribe
     unsubscribe_link: "%{unsubscribe} from these notifications"
     copyright_html: '%{app_name} by <a href="https://meedan.com">Meedan</a>'
+    reset_password:
+      title: Reset Password
+    invitation:
+      title: New Invitation
+    delete_user:
+      subject: "[%{team}] A user was deleted"
+      header_title: User Deleted
+      header_text: A user account was deleted and its content was reassigned to %{anonymous} user %{id}
+      anonymous: anonymous
     task_resolved:
       subject: "[%{team} - %{project}] Task Answered"
       header_title: Task Answered
@@ -374,6 +382,14 @@ en:
       unassign_log: "%{author} unassigned %{model} from %{username}"
       assign_by: Assigned by
       unassign_by: Unassigned by
+      ready_subject: "[%{team} - %{project}] Assignments update is ready"
+      ready_assign_title: Assign assignments
+      ready_assign_text: "The assignments update process was completed successfully.
+          Project %{url} and its items and tasks are now assigned to %{assignee}."
+      ready_unassign_title: Unassign assignments
+      ready_unassign_text: "The assignments update process was completed successfully.
+          Project %{url} and its items and tasks are now unassigned from %{assignee}."
+      project_button: Go to the project page
     request_to_join:
       subject: "Request to join %{team}"
       team_page: team page
@@ -548,19 +564,6 @@ en:
     blank_project: Invalid blank project
     invalid_annotator: Invalid annotator %{user}
     invalid_assignee: Invalid assignee %{user}
-  mail_subject_assignments_ready: "[%{team} - %{project}] Assignments update is ready"
-  mail_body_assignments_ready_assign: |-
-      Hello %{username},
-      The assignments update process was completed successfully.
-      Project '%{project_title}' (%{project_url}) and its items and tasks are now assigned to %{assignee}.
-      Thanks,
-      — The %{app_name} team
-  mail_body_assignments_ready_unassign: |-
-      Hello %{username},
-      The assignments update process was completed successfully.
-      Project '%{project_title}' (%{project_url}) and its items and tasks are now unassigned from %{assignee}.
-      Thanks,
-      — The %{app_name} team
   team_import_completed_subject: Your data import has completed
   team_import_completed_mail: "<p>Hello,</p> <p>Your data import job into %{app_name} has completed. You can check %{worksheet_url} to review the status of each item to be imported.</p> <p>Note that you can restart the import after you fix any errors that are reported there - the previously-imported items will not be duplicated.</p> <p>— The %{app_name} team</p>"
   pender_url_invalid: This link is invalid.
