--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -231,7 +231,6 @@ en:
           html: When ready, the team copy will be available at <strong>%{copy_url}</strong>
     flash:
       delete_team_scheduled: The team %{team} is being deleted
-  reset_password_instructions: "%{app_name} reset password instructions"
   email_not_found: E-mail not found
   slack_channel_format_wrong: Invalid Slack channel
   translation_status_not_valid: Invalid status
@@ -300,7 +299,12 @@ en:
   devise:
     mailer:
       reset_password_instructions:
-        instruction: Someone has requested a link to change your password, and you can do this through the link below. <strong>Please note that this link expires in %{expire} hours.</strong>
+        subject: "%{app_name} reset password instructions"
+        header_title: Password reset request
+        header_text: "We've received your request to reset your %{app_name} password."
+        action: Reset your password
+        instruction: This request will expire in %{expire} hours. Get a new password reset email for a new request
+        instruction_2: If you didn't make this request, or are having difficulty resetting your password, please contact us at %{support_email}
       invitation_instructions:
         subject: "%{user} invited you to join %{team} team"
         hello: Hello %{name}
@@ -354,8 +358,6 @@ en:
         <p>Try signing in with your email and password, rather than creating a new account.</p> 
         <p>Then you'll be logged in with the account you were using before. If you need additional help, please email %{support_email}.</p>
       email: email
-    reset_password:
-      title: Reset Password
     invitation:
       title: New Invitation
     delete_user:
